--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                             <tbody id="output">
                             </tbody>
                         </table>
+                        <img src="promo.jpg" alt="">
                     </div>
                     <!-- Font Awesome JS CDN -->
                     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"
